force-app/main/default/objects/Business_Address__c/Business_Address__c.object-meta.xml
<CustomObject>
    <label>Business Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>