force-app/main/default/objects/Business_Address__c/fields/Is_Country_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Is_Country_Head_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Country Head Office</label>
    <type>Checkbox</type>
</CustomField>