force-app/main/default/objects/Business_Address__c/fields/Office_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone_Number__c</fullName>
    <label>Office Phone Number</label>
    <type>Phone</type>
</CustomField>