force-app/main/default/objects/Business_Address__c/fields/Primary_Contac_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contac_s_Email__c</fullName>
    <label>Primary Contac&apos;s Email</label>
    <type>Email</type>
</CustomField>