force-app/main/default/objects/Business_Address__c/fields/Primary_Contact_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_Phone__c</fullName>
    <label>Primary Contact&apos;s Phone</label>
    <type>Phone</type>
</CustomField>