force-app/main/default/objects/Business_Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>125</length>
    <type>Text</type>
</CustomField>