force-app/main/default/objects/Business_Address__c/fields/Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_2__c</fullName>
    <label>Street Address 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>